# ai_messenger

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cog.toml  example_config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  check.yml
adapters/llm/ollama/: Cargo.toml  build.rs  manifest.json
adapters/llm/ollama/scripts/: build.sh
adapters/llm/ollama/src/: bindings.rs  lib.rs
adapters/llm/ollama/wit/: world.wit
scripts/: build_adapter_llm_ollama.sh  clear_cache.sh  clear_data.sh
src/: lib.rs  main.rs
src/adapter/: manifest.rs  mod.rs  tests.rs  traits.rs  wit.rs
src/adapter/runtime/: instance.rs  loader.rs  mod.rs
src/adapter/services/: llm.rs  mod.rs  storage.rs
src/cli/: builder.rs  mod.rs
src/cli/commands/: cache.rs  data.rs  mod.rs  serve.rs  shared.rs
src/cli/options/: help.rs  logging.rs  mod.rs  version.rs
src/config/: creation.rs  defaults.rs  discovery.rs  future_example.rs  loader.rs  mod.rs  path_expansion.rs  paths.rs  schema.rs
src/routes/: health.rs
src/routes/v1/: mod.rs
src/routes/v1/message/: handler.rs  mod.rs  request.rs  response.rs
src/routes/v1/sender/: mod.rs  profile.rs
src/server/: mod.rs  router.rs  startup.rs
src/utils/: logger.rs
wit/: llm.wit
