[package]
name = "ollama-adapter"
version = "0.0.1-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
wit-bindgen = "0.32"

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.component]
package = "ai-messenger:llm"

[package.metadata.component.dependencies]
